Fix: z-index to "back to top" button

--- a/css/app.css
+++ b/css/app.css
@@ -260,6 +260,7 @@ select {
     border-radius: 50%;
     border: 3px solid var(--bg-blue);
     color: var(--bg-blue);
+    z-index: 900;
 }
 
 .back-to-top a {
